--- a/_config.yml
+++ b/_config.yml
@@ -103,10 +103,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Jack Choi."
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an amazing person."
-  location         : "Somewhere"
+  bio              : "I'm web developer."
+  location         : "in Korea."
   email            :
   links:
     - label: "Email"
